fixed image jumping issue

--- a/css/src/w3.css
+++ b/css/src/w3.css
@@ -270,3 +270,77 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
     animation: sk-rotateplane 1.2s infinite ease-in-out;
 }
+
+/* NAVIGATION */
+body {
+    z-index: 999999;
+}
+
+.logo {
+    width: 2.1em;
+    height: 2.1em;
+    margin-top: 0.125em;
+    margin-right: 0.6em;
+    float: right;
+}
+
+.logo-small {
+    width: 2.1em;
+    height: 2.1em;
+    margin-top: 0.4em;
+    margin-left: 0.6em;
+    float: left;
+}
+
+.desktop-nav {
+    background-color: #fff;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+    color: #000;
+    width:100%;
+    overflow: hidden;
+    padding: 5px 0px;
+    float:left;
+    border:none;
+    display:block;
+    outline:0;
+}
+
+nav a {
+    position: relative;
+    display: inline-block;
+    outline: none;
+    color: #000;
+    text-decoration: none;
+    text-transform: uppercase;
+    text-shadow: 0 0 1px rgba(255,255,255,0.3);
+}
+
+nav a:hover,
+nav a:focus {
+    outline: none;
+}
+
+.nav-line a::after {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: rgba(0,0,0,0.1);
+    content: '';
+    opacity: 0;
+    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+    -moz-transition: opacity 0.3s, -moz-transform 0.3s;
+    transition: opacity 0.3s, transform 0.3s;
+    -webkit-transform: translateY(-8px);    /*line starting positions*/
+    -moz-transform: translateY(-8px);
+    transform: translateY(-8px);
+}
+
+.nav-line a:hover::after,
+.nav-line a:focus::after {
+    opacity: 1;
+    -webkit-transform: translateY(-5px);    /*line ending position*/
+    -moz-transform: translateY(-5px);
+    transform: translateY(-5px);
+}
